NakamaStream - Mega Update features and desing

--- a/src/views/admin.ejs
+++ b/src/views/admin.ejs
@@ -18,7 +18,7 @@
                     Bienvenido, <%= req.session.username %> ❤️
                 </div>
                 <div class="admin-actions">
-                    <a href="/dashboard" class="button is-primary">Ir a Dashboard</a>
+                    <a href="/anime" class="button is-primary">Ir a Anime list</a>
                 </div>
             </div>
             <h1 class="title">Admin Panel</h1>
