--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
-            <a class="navbar-item" href="#">
+            <a class="navbar-item" href="/">
                 <img src="https://github.com/NakamaStream/Resources/blob/main/NakamStream-logo-HD-removebg.png?raw=true" alt="NakamaStream" style="max-height: 3rem;">
             </a>
             <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navMenu">
@@ -24,7 +24,8 @@
         </div>
         <div id="navMenu" class="navbar-menu">
             <div class="navbar-start">
-                <a class="navbar-item" href="#">Discord</a>
+                <a class="navbar-item" href="/about/jobs">Jobs</a>
+                <a class="navbar-item" href="/redirect/community/discord">Discord</a>
                 <a class="navbar-item" href="https://github.com/NakamaStream">Github</a>
                 <a class="navbar-item" href="https://www.patreon.com/sstudiosdevelopment/membership">Donaciones</a>
             </div>
