--- a/src/views/jobs.ejs
+++ b/src/views/jobs.ejs
@@ -16,7 +16,7 @@
 <body>
     <nav class="navbar" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
-            <a class="navbar-item" href="#">
+            <a class="navbar-item" href="/">
                 <img src="https://github.com/NakamaStream/Resources/blob/main/NakamStream-logo-HD-removebg.png?raw=true" alt="NakamaStream" style="max-height: 3rem;">
             </a>
             <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navMenu">
@@ -28,12 +28,9 @@
         <div id="navMenu" class="navbar-menu">
             <div class="navbar-start">
                 <a class="navbar-item" href="/">Inicio</a>
-                <a class="navbar-item" href="/discord">Discord</a>
+                <a class="navbar-item" href="/redirect/community/discord">Discord</a>
                 <a class="navbar-item" href="https://github.com/NakamaStream">Github</a>
                 <a class="navbar-item" href="https://www.patreon.com/sstudiosdevelopment/membership">Donaciones</a>
-            </div>
-            <div class="navbar-end" style="margin-right: 2rem; margin-top: 1rem;">
-                <a class="navbar-item button is-primary" href="/login" style="background-color: #ff6b6b; color: white; box-shadow: none;">Iniciar sesión</a>
             </div>
         </div>
     </nav>
