--- a/src/views/privacy.ejs
+++ b/src/views/privacy.ejs
@@ -24,12 +24,10 @@
         </div>
         <div id="navMenu" class="navbar-menu">
             <div class="navbar-start">
-                <a class="navbar-item" href="#">Discord</a>
+                <a class="navbar-item" href="/about/jobs">Jobs</a>
+                <a class="navbar-item" href="/redirect/community/discord">Discord</a>
                 <a class="navbar-item" href="https://github.com/NakamaStream">Github</a>
                 <a class="navbar-item" href="https://www.patreon.com/sstudiosdevelopment/membership">Donaciones</a>
-            </div>
-            <div class="navbar-end" style="margin-right: 2rem;">
-                <a class="navbar-item button is-primary" href="/login" style="background-color: #ff6b6b; color: white; box-shadow: none;">Iniciar sesión</a>
             </div>
         </div>
     </nav>
